fix: ajust the bg color ( as per design ) to make the text readable on all themes

--- a/apps/tailwind-components/assets/css/main.css
+++ b/apps/tailwind-components/assets/css/main.css
@@ -84,8 +84,8 @@
     --background-color-pagination: var(--color-blue-800);
     --background-color-pagination-hover: var(--color-blue-900);
     --background-color-pagination-input: var(--color-white);
-    --background-color-footer: var(--color-blue-800);
-    --background-color-modal-footer: var(--color-blue-800);
+    --background-color-footer: var(--color-white);
+    --background-color-modal-footer: var(--color-white);
     --background-color-tab: var(--color-blue-50);
     --background-color-tab-hover: var(--color-blue-500);
     --background-color-tab-active: var(--color-blue-500);
